# telegram-chat-viewer

./: .gitignore  README.md  index.html
tauri-project/: README.md  package.json
tauri-project/src-tauri/: Cargo.toml  tauri.conf.json
