[package]
name = "telegram-chat-viewer"
version = "0.1.0"
description = "Telegram chat export viewer"
authors = ["teiqo"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
